--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
                     <div class="tab-pane fade show active" id="listing" role="tabpanel" aria-labelledby="listing-tab">
                         <form action="">
                             <div class="row">
-                                <div class="col-lg-4 col-sm-6">
+                                <div class="col-lg-4">
                                     <div>
                                         <p>What you'd like to find?</p>
                                         <input style="font-size: 1rem;" class="form-control form-control-lg" type="text" placeholder="Search churches, choirs, band">
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-sm-6">
+                                <div class="col-lg-4">
                                     <div>
                                         <p>Where to look for?</p>
                                         <select name="category" id="" class="w-100">
@@ -136,7 +136,7 @@
                                         </div> -->
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-sm-6">
+                                <div class="col-lg-4">
                                     <div>
                                         <p>In what category?</p>
                                         <select name="category" id="" class="w-100">
@@ -321,64 +321,64 @@
                 </div>
                 <div class="state-images mt-5">
                     <div class="owl-carousel owl-theme row">
-                        <div class="col-lg-3 item col-12">
-                            <img class="w-100"src="https://images.unsplash.com/photo-1531846802986-4942a5c3dd08?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
+                        <div class="col-lg-3 w- 75 item col-12">
+                            <img class="w-100" src="https://source.unsplash.com/user/erondu/400x400">
                             <div class="state-text text-center">
                                 <h1 class="pt-5">Lagos</h1>
                                 <h6 class="pb-5">100 Listings</h6>
                             </div>
                         </div>
-                        <div class="col-lg-3 item col-12">
-                            <img class="w-100"src="https://images.unsplash.com/photo-1508030358362-c071fa056233?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
+                        <div class="col-lg-3 w- 75 item col-12">
+                            <img class="w-100" src="https://source.unsplash.com/user/erondu/400x400">
                             <div class="state-text text-center">
                                 <h1 class="pt-5">Abuja</h1>
                                 <h6 class="pb-5">25 Listings</h6>
                             </div>
                         </div>
-                        <div class="col-lg-3 item col-12">
-                            <img class="w-100"src="https://images.unsplash.com/photo-1525095240410-9645dea911e4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
+                        <div class="col-lg-3 w- 75 item col-12">
+                            <img class="w-100" src="https://source.unsplash.com/user/erondu/400x400">
                             <div class="state-text text-center">
                                 <h1 class="pt-5">Ibadan</h1>
                                 <h6 class="pb-5">67 Listings</h6>
                             </div>
                         </div>
-                        <div class="col-lg-3 item col-12">
-                            <img class="w-100"src="https://images.unsplash.com/photo-1550837725-bdcb030d1e54?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
+                        <div class="col-lg-3 w- 75 item col-12">
+                            <img class="w-100" src="https://source.unsplash.com/user/erondu/400x400">
                             <div class="state-text text-center">
                                 <h1 class="pt-5">Port-Harcourt</h1>
                                 <h6 class="pb-5">65 Listings</h6>
                             </div>
                         </div>
-                        <div class="col-lg-3 item col-12">
-                            <img class="w-100"src="https://images.unsplash.com/photo-1526996950622-c07217b29fa9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
+                        <div class="col-lg-3 w- 75 item col-12">
+                            <img class="w-100" src="https://source.unsplash.com/user/erondu/400x400">
                             <div class="state-text text-center">
                                 <h1 class="pt-5">Warri</h1>
                                 <h6 class="pb-5">34 Listings</h6>
                             </div>
                         </div>
-                        <div class="col-lg-3 item col-12">
-                            <img class="w-100"src="https://images.unsplash.com/photo-1498957607239-c54bf0abde7a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
+                        <div class="col-lg-3 w- 75 item col-12">
+                            <img class="w-100" src="https://source.unsplash.com/user/erondu/400x400">
                             <div class="state-text text-center">
                                 <h1 class="pt-5">Kano</h1>
                                 <h6 class="pb-5">80 Listings</h6>
                             </div>
                         </div>
-                        <div class="col-lg-3 item col-12">
-                            <img class="w-100"src="https://images.unsplash.com/photo-1501274489983-5a343e378cd6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
+                        <div class="col-lg-3 w- 75 item col-12">
+                            <img class="w-100" src="https://source.unsplash.com/user/erondu/400x400">
                             <div class="state-text text-center">
                                 <h1 class="pt-5">Benin</h1>
                                 <h6 class="pb-5">59 Listings</h6>
                             </div>
                         </div>
-                        <div class="col-lg-3 item col-12">
-                            <img class="w-100"src="https://images.unsplash.com/photo-1550837725-40d6bb9d0f97?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
+                        <div class="col-lg-3 w- 75 item col-12">
+                            <img class="w-100" src="https://source.unsplash.com/user/erondu/400x400">
                             <div class="state-text text-center">
                                 <h1 class="pt-5">Imo</h1>
                                 <h6 class="pb-5">30 Listings</h6>
                             </div>
                         </div>
-                        <div class="col-lg-3 item col-12">
-                            <img class="w-100"src="https://images.unsplash.com/photo-1550837725-d8384a839794?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
+                        <div class="col-lg-3 w- 75 item col-12">
+                            <img class="w-100" src="https://source.unsplash.com/user/erondu/400x400">
                             <div class="state-text text-center">
                                 <h1 class="pt-5">Akure</h1>
                                 <h6 class="pb-5">15 Listings</h6>
@@ -399,7 +399,7 @@
                         <p>Do you have an event coming up? Own a tight Live Band? IS your choir really dope that they deserve recognition? OWn a ministry or just started one? Don't worry, We got you!</p>
                         <p>Adding your listing to wakachurch is very fast and super easy. Let visitors see your Church, Choir, Bands & Events first when they browse through wakachurch</p>
                         <p class="font-weight-bold text-center mt-5">We bring the people closer to Church</p>
-                        <div class="text-center mt-5">
+                        <div class="text-center mx-auto mt-5">
                             <a href="#" class="btn btn-warning mr-5">Add Ministry</a>
                             <a href="#" class="btn btn-warning">Add Event</a>
                         </div>                    
