--- a/index.html
+++ b/index.html
@@ -321,67 +321,67 @@
                 </div>
                 <div class="state-images mt-5">
                     <div class="owl-carousel owl-theme row">
-                        <div class="col-lg-3 w- 75 item col-12">
-                            <img class="w-100" src="https://source.unsplash.com/user/erondu/300x300">
+                        <div class="col-lg-3 item col-12">
+                            <img class="w-100" src="https://source.unsplash.com/user/erondu/250x250">
                             <div class="state-text text-center">
-                                <h1 class="pt-5">Lagos</h1>
-                                <h6 class="pb-5">100 Listings</h6>
+                                <h1 class="pt-2">Lagos</h1>
+                                <h6 class="pb-2">100 Listings</h6>
                             </div>
                         </div>
-                        <div class="col-lg-3 w- 75 item col-12">
-                            <img class="w-100" src="https://source.unsplash.com/user/erondu/300x300">
+                        <div class="col-lg-3 item col-12">
+                            <img class="w-100" src="https://source.unsplash.com/user/erondu/250x250">
                             <div class="state-text text-center">
-                                <h1 class="pt-5">Abuja</h1>
-                                <h6 class="pb-5">25 Listings</h6>
+                                <h1 class="pt-2">Abuja</h1>
+                                <h6 class="pb-2">25 Listings</h6>
                             </div>
                         </div>
-                        <div class="col-lg-3 w- 75 item col-12">
-                            <img class="w-100" src="https://source.unsplash.com/user/erondu/300x300">
+                        <div class="col-lg-3 item col-12">
+                            <img class="w-100" src="https://source.unsplash.com/user/erondu/250x250">
                             <div class="state-text text-center">
-                                <h1 class="pt-5">Ibadan</h1>
-                                <h6 class="pb-5">67 Listings</h6>
+                                <h1 class="pt-2">Ibadan</h1>
+                                <h6 class="pb-2">67 Listings</h6>
                             </div>
                         </div>
-                        <div class="col-lg-3 w- 75 item col-12">
-                            <img class="w-100" src="https://source.unsplash.com/user/erondu/300x300">
+                        <div class="col-lg-3 item col-12">
+                            <img class="w-100" src="https://source.unsplash.com/user/erondu/250x250">
                             <div class="state-text text-center">
-                                <h1 class="pt-5">Port-Harcourt</h1>
-                                <h6 class="pb-5">65 Listings</h6>
+                                <h1 class="pt-2">Port-Harcourt</h1>
+                                <h6 class="pb-2">65 Listings</h6>
                             </div>
                         </div>
-                        <div class="col-lg-3 w- 75 item col-12">
-                            <img class="w-100" src="https://source.unsplash.com/user/erondu/300x300">
+                        <div class="col-lg-3 item col-12">
+                            <img class="w-100" src="https://source.unsplash.com/user/erondu/250x250">
                             <div class="state-text text-center">
-                                <h1 class="pt-5">Warri</h1>
-                                <h6 class="pb-5">34 Listings</h6>
+                                <h1 class="pt-2">Warri</h1>
+                                <h6 class="pb-2">34 Listings</h6>
                             </div>
                         </div>
-                        <div class="col-lg-3 w- 75 item col-12">
-                            <img class="w-100" src="https://source.unsplash.com/user/erondu/300x300">
+                        <div class="col-lg-3 item col-12">
+                            <img class="w-100" src="https://source.unsplash.com/user/erondu/250x250">
                             <div class="state-text text-center">
-                                <h1 class="pt-5">Kano</h1>
-                                <h6 class="pb-5">80 Listings</h6>
+                                <h1 class="pt-2">Kano</h1>
+                                <h6 class="pb-2">80 Listings</h6>
                             </div>
                         </div>
-                        <div class="col-lg-3 w- 75 item col-12">
-                            <img class="w-100" src="https://source.unsplash.com/user/erondu/300x300">
+                        <div class="col-lg-3 item col-12">
+                            <img class="w-100" src="https://source.unsplash.com/user/erondu/250x250">
                             <div class="state-text text-center">
-                                <h1 class="pt-5">Benin</h1>
-                                <h6 class="pb-5">59 Listings</h6>
+                                <h1 class="pt-2">Benin</h1>
+                                <h6 class="pb-2">59 Listings</h6>
                             </div>
                         </div>
-                        <div class="col-lg-3 w- 75 item col-12">
-                            <img class="w-100" src="https://source.unsplash.com/user/erondu/300x300">
+                        <div class="col-lg-3 item col-12">
+                            <img class="w-100" src="https://source.unsplash.com/user/erondu/250x250">
                             <div class="state-text text-center">
-                                <h1 class="pt-5">Imo</h1>
-                                <h6 class="pb-5">30 Listings</h6>
+                                <h1 class="pt-2">Imo</h1>
+                                <h6 class="pb-2">30 Listings</h6>
                             </div>
                         </div>
-                        <div class="col-lg-3 w- 75 item col-12">
-                            <img class="w-100" src="https://source.unsplash.com/user/erondu/300x300">
+                        <div class="col-lg-3 item col-12">
+                            <img class="w-100" src="https://source.unsplash.com/user/erondu/250x250">
                             <div class="state-text text-center">
-                                <h1 class="pt-5">Akure</h1>
-                                <h6 class="pb-5">15 Listings</h6>
+                                <h1 class="pt-2">Akure</h1>
+                                <h6 class="pb-2">15 Listings</h6>
                             </div>
                         </div>
 
