--- a/index.html
+++ b/index.html
@@ -1161,10 +1161,73 @@
                     </div>                                      
                 </div>
                 <div class="see-more">
-                    <a href="#" class="btn btn-secondary">See More....</a>
+                    <a href="#" class="btn btn-secondary">Add More Events</a>
+                    <a href="#" class="btn btn-secondary">See More Events</a>
                 </div>                
             </div>            
-        </section>               
+        </section> 
+        <footer>
+            <div class="container pb-2">
+                <div class="pt-5 pb-5 text-left">
+                    <h1>WAKACHURCH</h1>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="p-3 ministries">
+                            <div>
+                                <h5>236,000 Ministries</h5>
+                                <p class="font-weight-bold">NATIONWIDE</p>                                
+                            </div>
+                            <div class="mt-5">
+                                <h5>1,000,000 Registered Users</h5>
+                                <p class="font-weight-bold">UNIQUE USERS</p>                                
+                            </div>
+                            <div class="mt-5 ">
+                                <h5>1,000 Reviews</h5>
+                                <p class="font-weight-bold">SHARED</p>                                
+                            </div>                            
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="p-3 discover">
+                            <h3>DISCOVER</h3>
+                            <div class="mt-4">
+                                <a href="#" class="mb-0 font-weight-bold">All Ministries</a>
+                                <a href="#" class="mb-0 font-weight-bold">All Events</a>
+                                <a href="#" class="mb-0 font-weight-bold">Recently Reviewed</a>
+                                <a href="#" class="mb-0 font-weight-bold">Recently Added Churches</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="p-3 company">
+                            <h3>COMPANY</h3>
+                            <div class="mt-4">
+                                <a href="#" class="mb-0 font-weight-bold">Team</a>
+                                <a href="#" class="mb-0 font-weight-bold">About Us</a>
+                                <a href="#" class="mb-0 font-weight-bold">Contact Us</a>
+                                <a href="#" class="mb-0 font-weight-bold">Teams & privacy</a>
+                                <a href="#" class="mb-0 font-weight-bold">Write us a Feedback</a>
+                            </div>
+                        </div>                        
+                    </div>
+                </div>
+                <div class="text-center mt-3">
+                    <h2>Follow Us!</h2>
+                    <div class="social-media">
+                        <a class="mr-1" href="#"><i class="fab fa-facebook fa-1x"></i></a>
+                        <a class="mr-1" href="#"><i class="fab fa-instagram fa-1x"></i></a>
+                        <a class="mr-1" href="#"><i class="fab fa-twitter-square fa-1x"></i></a>
+                        <a href="#">@wakachurch</a>
+                    </div>
+                </div>
+            </div>
+            <div class="copy">
+                <div class="text-center pt-3">
+                    <p class="mb-0 pb-2"><strong>Copyright</strong> &copy; 2019 Wakachurch</p>
+                </div>
+            </div>            
+        </footer>              
     </main>
 </body>    
 
