REmoved white spaces from mobile view

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <p class="text-center">Find Churches, choirs, bands & friends</p>
             </div>
             <div class="brand">      
-                <div class="row">
+                <div class="row w-100">
                     <div class="col-lg-4"></div>
                     <div class="col-lg-1 col-6 col-sm-6">
                         <div class="text-center">
@@ -682,62 +682,65 @@
                     <h6>Discover and follow churches, choirs & bands</h6>
                 </div>
             </div>
-            <div class="discover-follow text-center row">
-                <div class="col-lg-2">
-                    <div class="img-thumbnail">
-                        <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
-                        <div class="dis-sub">
-                            <h5 class="mt-2">The Elevation Church</h5>
-                            <button class="mt-3 btn btn-primary"><i class="fas fa-user-plus"></i> Follow <span>12k</span> </button>
+            <div class="container">
+                <div class="discover-follow text-center row">
+                    <div class="col-lg-2">
+                        <div class="img-thumbnail">
+                            <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
+                            <div class="dis-sub">
+                                <h5 class="mt-2">The Elevation Church</h5>
+                                <button class="mt-3 btn btn-primary"><i class="fas fa-user-plus"></i> Follow <span>12k</span> </button>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-2">
-                    <div class="img-thumbnail">
-                        <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
-                        <div class="dis-sub">
-                            <h5 class="mt-2">The Elevation Church</h5>
-                            <button class="mt-3 btn btn-primary"><i class="fas fa-user-plus"></i> Follow <span>12k</span> </button>
+                    <div class="col-lg-2">
+                        <div class="img-thumbnail">
+                            <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
+                            <div class="dis-sub">
+                                <h5 class="mt-2">The Elevation Church</h5>
+                                <button class="mt-3 btn btn-primary"><i class="fas fa-user-plus"></i> Follow <span>12k</span> </button>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-2">
-                    <div class="img-thumbnail">
-                        <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
-                        <div class="dis-sub">
-                            <h5 class="mt-2">The Elevation Church</h5>
-                            <button class="mt-3 btn btn-primary"><i class="fas fa-user-plus"></i> Follow <span>12k</span> </button>
+                    <div class="col-lg-2">
+                        <div class="img-thumbnail">
+                            <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
+                            <div class="dis-sub">
+                                <h5 class="mt-2">The Elevation Church</h5>
+                                <button class="mt-3 btn btn-primary"><i class="fas fa-user-plus"></i> Follow <span>12k</span> </button>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-2">
-                    <div class="img-thumbnail">
-                        <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
-                        <div class="dis-sub">
-                            <h5 class="mt-2">The Elevation Church</h5>
-                            <button class="mt-3 btn btn-primary"><i class="fas fa-user-plus"></i> Follow <span>12k</span> </button>
+                    <div class="col-lg-2">
+                        <div class="img-thumbnail">
+                            <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
+                            <div class="dis-sub">
+                                <h5 class="mt-2">The Elevation Church</h5>
+                                <button class="mt-3 btn btn-primary"><i class="fas fa-user-plus"></i> Follow <span>12k</span> </button>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-2">
-                    <div class="img-thumbnail">
-                        <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
-                        <div class="dis-sub">
-                            <h5 class="mt-2">The Elevation Church</h5>
-                            <button class="mt-3 btn btn-primary"><i class="fas fa-user-plus"></i> Follow <span>12k</span> </button>
+                    <div class="col-lg-2">
+                        <div class="img-thumbnail">
+                            <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
+                            <div class="dis-sub">
+                                <h5 class="mt-2">The Elevation Church</h5>
+                                <button class="mt-3 btn btn-primary"><i class="fas fa-user-plus"></i> Follow <span>12k</span> </button>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-2">
-                    <div class="img-thumbnail">
-                        <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
-                        <div class="dis-sub">
-                            <h5 class="mt-2">The Elevation Church</h5>
-                            <button class="mt-3 btn btn-primary"><i class="fas fa-user-plus"></i> Follow <span>12k</span> </button>
+                    <div class="col-lg-2">
+                        <div class="img-thumbnail">
+                            <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
+                            <div class="dis-sub">
+                                <h5 class="mt-2">The Elevation Church</h5>
+                                <button class="mt-3 btn btn-primary"><i class="fas fa-user-plus"></i> Follow <span>12k</span> </button>
+                            </div>
                         </div>
-                    </div>
-                </div>                                                                                
-            </div>
+                    </div>                                                                                
+                </div>                
+            </div>            
+
             <div class="see-more">
                 <a href="#" class="btn btn-secondary">See More</a>
             </div>
@@ -959,68 +962,71 @@
                     <h6>Discover and follow churches, choirs & bands</h6>
                 </div>
             </div>
-            <div class="discover-follow text-center row">
-                <div class="col-lg-2">
-                    <div class="img-thumbnail">
-                        <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
-                        <div class="dis-sub">
-                            <h5 class="mt-2">John Carter</h5>
-                            <h6>Eden Centre</h6>
-                            <button class="mt-3 btn btn-primary"><i class="fas fa-user-plus"></i> Follow <span>12k</span> </button>
+            <div class="container">
+                <div class="discover-follow text-center row">
+                    <div class="col-lg-2">
+                        <div class="img-thumbnail">
+                            <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
+                            <div class="dis-sub">
+                                <h5 class="mt-2">John Carter</h5>
+                                <h6>Eden Centre</h6>
+                                <button class="mt-3 btn btn-primary"><i class="fas fa-user-plus"></i> Follow <span>12k</span> </button>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-2">
-                    <div class="img-thumbnail">
-                        <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
-                        <div class="dis-sub">
-                            <h5 class="mt-2">Funke Awero</h5>
-                            <h6>Eden Centre</h6>
-                            <button class="mt-3 btn btn-primary"><i class="fas fa-user-plus"></i> Follow <span>12k</span> </button>
+                    <div class="col-lg-2">
+                        <div class="img-thumbnail">
+                            <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
+                            <div class="dis-sub">
+                                <h5 class="mt-2">Funke Awero</h5>
+                                <h6>Eden Centre</h6>
+                                <button class="mt-3 btn btn-primary"><i class="fas fa-user-plus"></i> Follow <span>12k</span> </button>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-2">
-                    <div class="img-thumbnail">
-                        <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
-                        <div class="dis-sub">
-                            <h5 class="mt-2">Matthew Ugonna</h5>
-                            <h6>Eden Centre</h6>
-                            <button class="mt-3 btn btn-primary"><i class="fas fa-user-plus"></i> Follow <span>12k</span> </button>
+                    <div class="col-lg-2">
+                        <div class="img-thumbnail">
+                            <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
+                            <div class="dis-sub">
+                                <h5 class="mt-2">Matthew Ugonna</h5>
+                                <h6>Eden Centre</h6>
+                                <button class="mt-3 btn btn-primary"><i class="fas fa-user-plus"></i> Follow <span>12k</span> </button>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-2">
-                    <div class="img-thumbnail">
-                        <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
-                        <div class="dis-sub">
-                            <h5 class="mt-2">Glory Abejoye</h5>
-                            <h6>Eden Centre</h6>
-                            <button class="mt-3 btn btn-primary"><i class="fas fa-user-plus"></i> Follow <span>12k</span> </button>
+                    <div class="col-lg-2">
+                        <div class="img-thumbnail">
+                            <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
+                            <div class="dis-sub">
+                                <h5 class="mt-2">Glory Abejoye</h5>
+                                <h6>Eden Centre</h6>
+                                <button class="mt-3 btn btn-primary"><i class="fas fa-user-plus"></i> Follow <span>12k</span> </button>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-2">
-                    <div class="img-thumbnail">
-                        <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
-                        <div class="dis-sub">
-                            <h5 class="mt-2">Donkula Prince</h5>
-                            <h6>Eden Centre</h6>
-                            <button class="mt-3 btn btn-primary"><i class="fas fa-user-plus"></i> Follow <span>12k</span> </button>
+                    <div class="col-lg-2">
+                        <div class="img-thumbnail">
+                            <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
+                            <div class="dis-sub">
+                                <h5 class="mt-2">Donkula Prince</h5>
+                                <h6>Eden Centre</h6>
+                                <button class="mt-3 btn btn-primary"><i class="fas fa-user-plus"></i> Follow <span>12k</span> </button>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-2">
-                    <div class="img-thumbnail">
-                        <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
-                        <div class="dis-sub">
-                            <h5 class="mt-2">Emmanuel Olusola</h5>
-                            <h6>Eden Centre</h6>
-                            <button class="mt-3 btn btn-primary"><i class="fas fa-user-plus"></i> Follow <span>12k</span> </button>
+                    <div class="col-lg-2">
+                        <div class="img-thumbnail">
+                            <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
+                            <div class="dis-sub">
+                                <h5 class="mt-2">Emmanuel Olusola</h5>
+                                <h6>Eden Centre</h6>
+                                <button class="mt-3 btn btn-primary"><i class="fas fa-user-plus"></i> Follow <span>12k</span> </button>
+                            </div>
                         </div>
-                    </div>
-                </div>                                                                                
-            </div>
+                    </div>                                                                                
+                </div>                
+            </div>            
+
             <div class="see-more">
                 <a href="#" class="btn btn-secondary">See More</a>
             </div>            
