Added slider to follow boxes

--- a/index.html
+++ b/index.html
@@ -683,8 +683,8 @@
                 </div>
             </div>
             <div class="container">
-                <div class="discover-follow text-center row">
-                    <div class="col-lg-2">
+                <div class="discover-follow text-center  owl-carousel owl-theme row">
+                    <div class="col-lg-2 col-12 item">
                         <div class="img-thumbnail">
                             <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
                             <div class="dis-sub">
@@ -693,7 +693,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-2 col-12 item">
                         <div class="img-thumbnail">
                             <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
                             <div class="dis-sub">
@@ -702,7 +702,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-2 col-12 item">
                         <div class="img-thumbnail">
                             <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
                             <div class="dis-sub">
@@ -711,7 +711,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-2 col-12 item">
                         <div class="img-thumbnail">
                             <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
                             <div class="dis-sub">
@@ -720,7 +720,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-2 col-12 item">
                         <div class="img-thumbnail">
                             <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
                             <div class="dis-sub">
@@ -729,7 +729,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-2 col-12 item">
                         <div class="img-thumbnail">
                             <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
                             <div class="dis-sub">
@@ -963,8 +963,8 @@
                 </div>
             </div>
             <div class="container">
-                <div class="discover-follow text-center row">
-                    <div class="col-lg-2">
+                <div class="discover-follow text-center owl-carousel owl-theme row">
+                    <div class="col-lg-2 col-12 item">
                         <div class="img-thumbnail">
                             <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
                             <div class="dis-sub">
@@ -974,7 +974,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-2 col-12 item">
                         <div class="img-thumbnail">
                             <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
                             <div class="dis-sub">
@@ -984,7 +984,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-2 col-12 item">
                         <div class="img-thumbnail">
                             <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
                             <div class="dis-sub">
@@ -994,7 +994,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-2 col-12 item">
                         <div class="img-thumbnail">
                             <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
                             <div class="dis-sub">
@@ -1004,7 +1004,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-2 col-12 item">
                         <div class="img-thumbnail">
                             <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
                             <div class="dis-sub">
@@ -1014,7 +1014,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-2 col-12 item">
                         <div class="img-thumbnail">
                             <div class="mt-2 test-circle" style="background:url(https://i.pinimg.com/originals/ac/f2/25/acf225434013985bac9b02e5a3dddb78.jpg) center no-repeat;"></div>
                             <div class="dis-sub">
