--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                         <p>Do you have an event coming up? Own a tight Live Band? IS your choir really dope that they deserve recognition? OWn a ministry or just started one? Don't worry, We got you!</p>
                         <p>Adding your listing to wakachurch is very fast and super easy. Let visitors see your Church, Choir, Bands & Events first when they browse through wakachurch</p>
                         <p class="font-weight-bold text-center mt-5">We bring the people closer to Church</p>
-                        <div class="text-center mx-auto mt-5">
+                        <div class="text-center mx-auto d-inline mt-5">
                             <a href="#" class="btn btn-warning mr-5">Add Ministry</a>
                             <a href="#" class="btn btn-warning">Add Event</a>
                         </div>                    
