--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                         <p class="font-weight-bold text-center mt-5">We bring the people closer to Church</p>
                         <div class="text-center mx-auto mt-5">
                             <a href="#" class="btn d-inline btn-warning mr-5">Add Ministry</a>
-                            <a href="#" class="btn btn-warning">Add Event</a>
+                            <a href="#" class="btn d-inline btn-warning">Add Event</a>
                         </div>                    
                     </div class="add-ministry-sub">
                 </div>
