--- a/auth/login.html
+++ b/auth/login.html
@@ -14,12 +14,48 @@
     <!-- Main Stylesheet -->
     <link rel="stylesheet" href="login.css">
     <!-- Googel Font -->
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700|Roboto:300,400,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <!-- Font-awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.0/css/all.css" integrity="sha384-Mmxa0mLqhmOeaE8vgOSbKacftZcsNYDjQzuCOm6D02luYSzBG8vpaOykv9lFQ51Y" crossorigin="anonymous">
 </head>
 <body>
-    
+    <header>
+        <div class="login-header text-center">
+            <h3 class=""><i>Hey, Welcome Back!</i></h3>
+            <p class="">Let's Make wakachurch Work For You</p>
+        </div>
+        <div class="login-form">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4"></div>
+                    <div class="col-lg-4">
+                        <form action="" method="POST" class="text-center">
+                            <div class="text-left form-group">
+                                <label class=" rrequired" for="exampleInputEmail1">Email address</label>
+                                <input type="email" class="form-control" required id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                            </div>
+                            <div class="text-left form-group">
+                                <label class=" rrequired" for="exampleInputPassword1">Password</label>
+                                <input type="password" class="form-control" required id="exampleInputPassword1" placeholder="Password">
+                            </div>
+                            <div class="text-left form-group form-check">
+                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                <label class="form-check-label" for="exampleCheck1">Remember Me</label>
+                                <span class="float-right text-danger">? Forgotten Password</span>
+                            </div>
+                            <button type="submit" class="btn btn-danger">Sign in</button>
+                        </form>
+                        <div class="mt-5 text-center">
+                            <p class="btn btn-secondary">New Member? <a class="text-danger" href="#"> Sign Up</a></p>
+                        </div>                        
+                    </div>
+                    <div class="col-lg-4"></div>
+                </div>                
+                
+            </div>
+        </div>
+    </header>
 </body>
 
 
