--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Main Stylesheet -->
     <link rel="stylesheet" href="main.css">
     <!-- Googel Font -->
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700|Roboto:300,400,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <!-- Font-awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.0/css/all.css" integrity="sha384-Mmxa0mLqhmOeaE8vgOSbKacftZcsNYDjQzuCOm6D02luYSzBG8vpaOykv9lFQ51Y" crossorigin="anonymous">
 </head>
@@ -48,7 +48,7 @@
                     <a class="nav-link" href="#">Add Ministry</a>
                 </li>
                 <li class="nav-link mr-3 p-0">
-                    <a href="" class="btn btn-danger ">Login</a>
+                    <a href="auth/login.html" class="btn btn-danger ">Login</a>
                 </li>
                 <li class="nav-link p-0">
                     <a href="" class="btn btn-success">Sign Up</a>
